--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-helpers-react": "^0.4.0",
-    "@types/node": "20.2.5",
-    "@types/react": "^18.2.8",
+    "@types/node": "^20.3.0",
+    "@types/react": "^18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "^8.42.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "eslint-config-next": "^13.4.5",
+    "next": "^13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "stripe": "^12.8.0",
-    "tailwind-merge": "^1.13.0",
+    "stripe": "^12.9.0",
+    "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
